T3novo/src/train/trainParser.java
// Generated from C:\Users\igorc\Desktop\LFA\tmp\T3\Grammar\train.g4 by ANTLR 4.1

        package train;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class trainParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GETS=1, PLUS=2, MINUS=3, LPAR=4, RPAR=5, LKEYS=6, RKEYS=7, MULT=8, DIVISION=9, 
		LESS=10, GREATER=11, COMAND_END=12, NOT=13, COMMA=14, AND=15, OR=16, EQUALS=17, 
		IF=18, ELSE=19, While=20, SLPIT=21, APPEND=22, REMOVE=23, STRING=24, BOOLEAN=25, 
		INTEGER=26, WAGON=27, TRAIN=28, LOCOM=29, POS=30, BOOL=31, INT=32, STR=33, 
		ID=34, WS=35;
	public static final String[] tokenNames = {
		"<INVALID>", "'='", "'+'", "'-'", "'('", "')'", "'{'", "'}'", "'*'", "'/'", 
		"'<'", "'>'", "';'", "'!'", "','", "'&&'", "'||'", "'=='", "'if'", "'else'", 
		"'wile'", "'split'", "'append'", "'remove'", "'String'", "'Boolean'", 
		"'Integer'", "'Wagon'", "'Train'", "'Locomotive'", "POS", "BOOL", "INT", 
		"STR", "ID", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_code = 1, RULE_definition = 2, RULE_train_operation = 3, 
		RULE_assignment = 4, RULE_control_structure = 5, RULE_function_call = 6, 
		RULE_math_operations = 7, RULE_math_op1 = 8, RULE_logical = 9, RULE_logical_operation = 10, 
		RULE_compare_operation = 11, RULE_value = 12, RULE_data = 13, RULE_type = 14, 
		RULE_primitive_type = 15, RULE_object_type = 16;
	public static final String[] ruleNames = {
		"prog", "code", "definition", "train_operation", "assignment", "control_structure", 
		"function_call", "math_operations", "math_op1", "logical", "logical_operation", 
		"compare_operation", "value", "data", "type", "primitive_type", "object_type"
	};

	@Override
	public String getGrammarFileName() { return "train.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public trainParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public Function_callContext function_call(int i) {
			return getRuleContext(Function_callContext.class,i);
		}
		public List<Control_structureContext> control_structure() {
			return getRuleContexts(Control_structureContext.class);
		}
		public List<Function_callContext> function_call() {
			return getRuleContexts(Function_callContext.class);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public List<Train_operationContext> train_operation() {
			return getRuleContexts(Train_operationContext.class);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public Train_operationContext train_operation(int i) {
			return getRuleContext(Train_operationContext.class,i);
		}
		public Control_structureContext control_structure(int i) {
			return getRuleContext(Control_structureContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << While) | (1L << STRING) | (1L << BOOLEAN) | (1L << INTEGER) | (1L << WAGON) | (1L << TRAIN) | (1L << LOCOM) | (1L << ID))) != 0)) {
				{
				setState(41);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(36); definition();
					}
					break;

				case 2:
					{
					setState(37); train_operation();
					}
					break;

				case 3:
					{
					setState(38); assignment();
					}
					break;

				case 4:
					{
					setState(39); control_structure();
					}
					break;

				case 5:
					{
					setState(40); function_call();
					}
					break;
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode ID() { return getToken(trainParser.ID, 0); }
		public TerminalNode GETS() { return getToken(trainParser.GETS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); type();
			setState(47); match(ID);
			setState(50);
			_la = _input.LA(1);
			if (_la==GETS) {
				{
				setState(48); match(GETS);
				setState(49); data();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Train_operationContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(trainParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(trainParser.ID, i);
		}
		public TerminalNode SLPIT() { return getToken(trainParser.SLPIT, 0); }
		public TerminalNode REMOVE() { return getToken(trainParser.REMOVE, 0); }
		public TerminalNode INT() { return getToken(trainParser.INT, 0); }
		public TerminalNode APPEND() { return getToken(trainParser.APPEND, 0); }
		public TerminalNode POS() { return getToken(trainParser.POS, 0); }
		public TerminalNode COMAND_END() { return getToken(trainParser.COMAND_END, 0); }
		public Train_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_train_operation; }
	}

	public final Train_operationContext train_operation() throws RecognitionException {
		Train_operationContext _localctx = new Train_operationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_train_operation);
		try {
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); match(ID);
				setState(53); match(SLPIT);
				setState(54); match(INT);
				setState(55); match(COMAND_END);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56); match(ID);
				setState(57); match(APPEND);
				setState(58); match(ID);
				setState(59); match(POS);
				setState(60); match(COMAND_END);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61); match(ID);
				setState(62); match(REMOVE);
				setState(63); match(POS);
				setState(64); match(COMAND_END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public Assignment result;
		public Token ID;
		public ValueContext value;
		public Math_operationsContext math_operations;
		public TerminalNode ID() { return getToken(trainParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode GETS() { return getToken(trainParser.GETS, 0); }
		public Math_operationsContext math_operations() {
			return getRuleContext(Math_operationsContext.class,0);
		}
		public TerminalNode COMAND_END() { return getToken(trainParser.COMAND_END, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			setState(79);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67); ((AssignmentContext)_localctx).ID = match(ID);
				setState(68); match(GETS);
				setState(69); ((AssignmentContext)_localctx).value = value();
				setState(70); match(COMAND_END);
				((AssignmentContext)_localctx).result =  new Assignment((((AssignmentContext)_localctx).ID!=null?((AssignmentContext)_localctx).ID.getText():null), ((AssignmentContext)_localctx).value.result);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); ((AssignmentContext)_localctx).ID = match(ID);
				setState(74); match(GETS);
				setState(75); ((AssignmentContext)_localctx).math_operations = math_operations();
				setState(76); match(COMAND_END);
				((AssignmentContext)_localctx).result =  new Assignment((((AssignmentContext)_localctx).ID!=null?((AssignmentContext)_localctx).ID.getText():null), ((AssignmentContext)_localctx).math_operations.result);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Control_structureContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(trainParser.While, 0); }
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(trainParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(trainParser.IF, 0); }
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public List<TerminalNode> RKEYS() { return getTokens(trainParser.RKEYS); }
		public List<TerminalNode> LKEYS() { return getTokens(trainParser.LKEYS); }
		public TerminalNode LKEYS(int i) {
			return getToken(trainParser.LKEYS, i);
		}
		public TerminalNode RKEYS(int i) {
			return getToken(trainParser.RKEYS, i);
		}
		public Control_structureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control_structure; }
	}

	public final Control_structureContext control_structure() throws RecognitionException {
		Control_structureContext _localctx = new Control_structureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_control_structure);
		int _la;
		try {
			setState(99);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); match(IF);
				{
				setState(82); logical();
				}
				setState(83); match(LKEYS);
				setState(84); code();
				setState(85); match(RKEYS);
				setState(91);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(86); match(ELSE);
					setState(87); match(LKEYS);
					setState(88); code();
					setState(89); match(RKEYS);
					}
				}

				}
				break;
			case While:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); match(While);
				{
				setState(94); logical();
				}
				setState(95); match(LKEYS);
				setState(96); code();
				setState(97); match(RKEYS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(trainParser.ID, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(trainParser.COMMA); }
		public TerminalNode LPAR() { return getToken(trainParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(trainParser.RPAR, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(trainParser.COMMA, i);
		}
		public TerminalNode COMAND_END() { return getToken(trainParser.COMAND_END, 0); }
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(ID);
			setState(102); match(LPAR);
			setState(103); value();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104); match(COMMA);
				setState(105); value();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111); match(RPAR);
			setState(112); match(COMAND_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_operationsContext extends ParserRuleContext {
		public Value result;
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public List<Math_op1Context> math_op1() {
			return getRuleContexts(Math_op1Context.class);
		}
		public TerminalNode MINUS(int i) {
			return getToken(trainParser.MINUS, i);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public Math_op1Context math_op1(int i) {
			return getRuleContext(Math_op1Context.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(trainParser.PLUS); }
		public List<TerminalNode> MINUS() { return getTokens(trainParser.MINUS); }
		public TerminalNode LPAR() { return getToken(trainParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(trainParser.RPAR, 0); }
		public TerminalNode PLUS(int i) {
			return getToken(trainParser.PLUS, i);
		}
		public Math_operationsContext math_operations() {
			return getRuleContext(Math_operationsContext.class,0);
		}
		public Math_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_operations; }
	}

	public final Math_operationsContext math_operations() throws RecognitionException {
		Math_operationsContext _localctx = new Math_operationsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_math_operations);
		int _la;
		try {
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(114); value();
					}
					break;

				case 2:
					{
					setState(115); math_op1();
					}
					break;
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLUS || _la==MINUS) {
					{
					{
					setState(118);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(121);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(119); value();
						}
						break;

					case 2:
						{
						setState(120); math_op1();
						}
						break;
					}
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128); match(LPAR);
				setState(129); math_operations();
				setState(130); match(RPAR);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(132); value();
					}
					break;

				case 2:
					{
					setState(133); math_op1();
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_op1Context extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(trainParser.INT, i);
		}
		public List<TerminalNode> ID() { return getTokens(trainParser.ID); }
		public TerminalNode MULT(int i) {
			return getToken(trainParser.MULT, i);
		}
		public List<TerminalNode> DIVISION() { return getTokens(trainParser.DIVISION); }
		public TerminalNode DIVISION(int i) {
			return getToken(trainParser.DIVISION, i);
		}
		public List<TerminalNode> MULT() { return getTokens(trainParser.MULT); }
		public TerminalNode ID(int i) {
			return getToken(trainParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(trainParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(trainParser.RPAR, 0); }
		public List<TerminalNode> INT() { return getTokens(trainParser.INT); }
		public Math_operationsContext math_operations() {
			return getRuleContext(Math_operationsContext.class,0);
		}
		public Math_op1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_op1; }
	}

	public final Math_op1Context math_op1() throws RecognitionException {
		Math_op1Context _localctx = new Math_op1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_math_op1);
		int _la;
		try {
			setState(150);
			switch (_input.LA(1)) {
			case INT:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				_la = _input.LA(1);
				if ( !(_la==INT || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MULT || _la==DIVISION) {
					{
					{
					setState(139);
					_la = _input.LA(1);
					if ( !(_la==MULT || _la==DIVISION) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(140);
					_la = _input.LA(1);
					if ( !(_la==INT || _la==ID) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					setState(145);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(146); match(LPAR);
				setState(147); math_operations();
				setState(148); match(RPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalContext extends ParserRuleContext {
		public Compare_operationContext compare_operation() {
			return getRuleContext(Compare_operationContext.class,0);
		}
		public TerminalNode NOT() { return getToken(trainParser.NOT, 0); }
		public List<TerminalNode> ID() { return getTokens(trainParser.ID); }
		public Logical_operationContext logical_operation() {
			return getRuleContext(Logical_operationContext.class,0);
		}
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public TerminalNode ID(int i) {
			return getToken(trainParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(trainParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(trainParser.RPAR, 0); }
		public LogicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical; }
	}

	public final LogicalContext logical() throws RecognitionException {
		LogicalContext _localctx = new LogicalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logical);
		try {
			setState(167);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152); match(ID);
				setState(153); compare_operation();
				setState(154); match(ID);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); match(ID);
				setState(157); logical_operation();
				setState(158); match(ID);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(160); match(LPAR);
				setState(161); logical();
				setState(162); match(RPAR);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164); match(NOT);
				setState(165); logical();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(166); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_operationContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(trainParser.AND, 0); }
		public TerminalNode OR() { return getToken(trainParser.OR, 0); }
		public Logical_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_operation; }
	}

	public final Logical_operationContext logical_operation() throws RecognitionException {
		Logical_operationContext _localctx = new Logical_operationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_logical_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compare_operationContext extends ParserRuleContext {
		public TerminalNode LESS() { return getToken(trainParser.LESS, 0); }
		public TerminalNode EQUALS() { return getToken(trainParser.EQUALS, 0); }
		public TerminalNode GREATER() { return getToken(trainParser.GREATER, 0); }
		public Compare_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compare_operation; }
	}

	public final Compare_operationContext compare_operation() throws RecognitionException {
		Compare_operationContext _localctx = new Compare_operationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_compare_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LESS) | (1L << GREATER) | (1L << EQUALS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public Value result;
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public TerminalNode ID() { return getToken(trainParser.ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_value);
		try {
			setState(175);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(173); match(ID);
				}
				break;
			case BOOL:
			case INT:
			case STR:
				enterOuterAlt(_localctx, 2);
				{
				setState(174); data();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(trainParser.BOOL, 0); }
		public TerminalNode STR() { return getToken(trainParser.STR, 0); }
		public TerminalNode INT() { return getToken(trainParser.INT, 0); }
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << STR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type result;
		public Primitive_typeContext primitive_type;
		public Object_typeContext object_type;
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public Object_typeContext object_type() {
			return getRuleContext(Object_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_type);
		try {
			setState(185);
			switch (_input.LA(1)) {
			case STRING:
			case BOOLEAN:
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); ((TypeContext)_localctx).primitive_type = primitive_type();
				((TypeContext)_localctx).result =  new Type(((TypeContext)_localctx).primitive_type.result);
				}
				break;
			case WAGON:
			case TRAIN:
			case LOCOM:
				enterOuterAlt(_localctx, 2);
				{
				setState(182); ((TypeContext)_localctx).object_type = object_type();
				((TypeContext)_localctx).result =  new Type(((TypeContext)_localctx).object_type.result);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typeContext extends ParserRuleContext {
		public Type result;
		public Token STRING;
		public Token BOOLEAN;
		public Token INTEGER;
		public TerminalNode INTEGER() { return getToken(trainParser.INTEGER, 0); }
		public TerminalNode STRING() { return getToken(trainParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(trainParser.BOOLEAN, 0); }
		public Primitive_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_type; }
	}

	public final Primitive_typeContext primitive_type() throws RecognitionException {
		Primitive_typeContext _localctx = new Primitive_typeContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_primitive_type);
		try {
			setState(193);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(187); ((Primitive_typeContext)_localctx).STRING = match(STRING);
				((Primitive_typeContext)_localctx).result =  new Type((((Primitive_typeContext)_localctx).STRING!=null?((Primitive_typeContext)_localctx).STRING.getText():null));
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 2);
				{
